tests/baselines/reference/callSignaturesThatDifferOnlyByReturnType2.errors.txt
callSignaturesThatDifferOnlyByReturnType2.ts(8,11): error TS2320: Interface 'A' cannot simultaneously extend types 'I<number>' and 'I<string>'.
  Named property 'foo' of types 'I<number>' and 'I<string>' are not identical.
callSignaturesThatDifferOnlyByReturnType2.ts(13,16): error TS2345: Argument of type 'string' is not assignable to parameter of type 'number'.


==== callSignaturesThatDifferOnlyByReturnType2.ts (2 errors) ====
    // Normally it is an error to have multiple overloads which differ only by return type in a single type declaration.
    // Here the multiple overloads come from multiple bases.
    
    interface I<T> {
        foo(x: number): T;
    }
    
    interface A extends I<number>, I<string> { }
              ~
!!! error TS2320: Interface 'A' cannot simultaneously extend types 'I<number>' and 'I<string>'.
!!! error TS2320:   Named property 'foo' of types 'I<number>' and 'I<string>' are not identical.
    
    var x: A;
    // BUG 822524
    var r = x.foo(1); // no error
    var r2 = x.foo(''); // error
                   ~~
!!! error TS2345: Argument of type 'string' is not assignable to parameter of type 'number'.
    